--- a/app-administrator-uzytkownicy.html
+++ b/app-administrator-uzytkownicy.html
@@ -123,8 +123,8 @@
                                 </div>
                             </div>
                             <div class="bg-primary mb-4 py-3 px-4 mx-n4">
-                                <ul class="list-inline mb-0">
-                                    <li class="list-inline-item"><span class="badge bg-info rounded-pill px-2"><span class="d-flex align-items-center mx-n1"><span class="fw-normal mx-1">Status:</span><strong class="mx-1"><strong>Aktywny</strong><br></strong><i class="la la-close mx-1"></i></span></span></li>
+                                <ul class="list-inline mx--n2 my--n4">
+                                    <li class="list-inline-item mx--2 my--4"><span class="badge bg-info d-block rounded-pill px-2"><span class="d-flex align-items-center mx-n1"><span class="fw-normal mx-1">Status:</span><strong class="mx-1"><strong>Aktywny</strong><br></strong><i class="la la-close mx-1"></i></span></span></li>
                                 </ul>
                             </div>
                             <div class="table-responsive bg-white">
@@ -157,7 +157,7 @@
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-administrator-uzytkownicy-szczegoly.html">Profil</a></div>
                                                     <div class="col-auto">
                                                         <div class="dropend"><button class="btn shadow-none rounded-0 p-0" aria-expanded="false" data-bs-toggle="dropdown" type="button"><i class="la la-ellipsis-v fs-3"></i></button>
-                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-administrator-uzytkownicy-szczegoly.html">Pokaż profil</a><a class="dropdown-item" href="app-administrator-uzytkownicy-edycja.html">Edytuj</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń konto</a></div>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-administrator-uzytkownicy-szczegoly.html">Pokaż profil</a><a class="dropdown-item" href="app-administrator-uzytkownicy-edycja.html">Edytuj</a><a class="dropdown-item" href="#" data-bs-target="#modal__lock" data-bs-toggle="modal">Zablokuj</a><a class="dropdown-item" href="#" data-bs-target="#modal__delete" data-bs-toggle="modal">Usuń konto</a></div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -178,7 +178,7 @@
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-administrator-uzytkownicy-szczegoly.html">Profil</a></div>
                                                     <div class="col-auto">
                                                         <div class="dropend"><button class="btn shadow-none rounded-0 p-0" aria-expanded="false" data-bs-toggle="dropdown" type="button"><i class="la la-ellipsis-v fs-3"></i></button>
-                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-administrator-uzytkownicy-szczegoly.html">Pokaż profil</a><a class="dropdown-item" href="app-administrator-uzytkownicy-edycja.html">Edytuj</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń konto</a></div>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-administrator-uzytkownicy-szczegoly.html">Pokaż profil</a><a class="dropdown-item" href="app-administrator-uzytkownicy-edycja.html">Edytuj</a><a class="dropdown-item" href="#" data-bs-target="#modal__lock" data-bs-toggle="modal">Zablokuj</a><a class="dropdown-item" href="#" data-bs-target="#modal__delete" data-bs-toggle="modal">Usuń konto</a></div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -199,7 +199,7 @@
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-administrator-uzytkownicy-szczegoly.html">Profil</a></div>
                                                     <div class="col-auto">
                                                         <div class="dropend"><button class="btn shadow-none rounded-0 p-0" aria-expanded="false" data-bs-toggle="dropdown" type="button"><i class="la la-ellipsis-v fs-3"></i></button>
-                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-administrator-uzytkownicy-szczegoly.html">Pokaż profil</a><a class="dropdown-item" href="app-administrator-uzytkownicy-edycja.html">Edytuj</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń konto</a></div>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-administrator-uzytkownicy-szczegoly.html">Pokaż profil</a><a class="dropdown-item" href="app-administrator-uzytkownicy-edycja.html">Edytuj</a><a class="dropdown-item" href="#" data-bs-target="#modal__lock" data-bs-toggle="modal">Zablokuj</a><a class="dropdown-item" href="#" data-bs-target="#modal__delete" data-bs-toggle="modal">Usuń konto</a></div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -220,7 +220,7 @@
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-administrator-uzytkownicy-szczegoly.html">Profil</a></div>
                                                     <div class="col-auto">
                                                         <div class="dropend"><button class="btn shadow-none rounded-0 p-0" aria-expanded="false" data-bs-toggle="dropdown" type="button"><i class="la la-ellipsis-v fs-3"></i></button>
-                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-administrator-uzytkownicy-szczegoly.html">Pokaż profil</a><a class="dropdown-item" href="app-administrator-uzytkownicy-edycja.html">Edytuj</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń konto</a></div>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-administrator-uzytkownicy-szczegoly.html">Pokaż profil</a><a class="dropdown-item" href="app-administrator-uzytkownicy-edycja.html">Edytuj</a><a class="dropdown-item" href="#" data-bs-target="#modal__lock" data-bs-toggle="modal">Zablokuj</a><a class="dropdown-item" href="#" data-bs-target="#modal__delete" data-bs-toggle="modal">Usuń konto</a></div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -241,7 +241,7 @@
                                                     <div class="col-auto"><a class="btn btn-primary btn-sm" role="button" href="app-administrator-uzytkownicy-szczegoly.html">Profil</a></div>
                                                     <div class="col-auto">
                                                         <div class="dropend"><button class="btn shadow-none rounded-0 p-0" aria-expanded="false" data-bs-toggle="dropdown" type="button"><i class="la la-ellipsis-v fs-3"></i></button>
-                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-administrator-uzytkownicy-szczegoly.html">Pokaż profil</a><a class="dropdown-item" href="app-administrator-uzytkownicy-edycja.html">Edytuj</a><a class="dropdown-item" href="#">Zablokuj</a><a class="dropdown-item" href="#">Usuń konto</a></div>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-administrator-uzytkownicy-szczegoly.html">Pokaż profil</a><a class="dropdown-item" href="app-administrator-uzytkownicy-edycja.html">Edytuj</a><a class="dropdown-item" href="#" data-bs-target="#modal__lock" data-bs-toggle="modal">Zablokuj</a><a class="dropdown-item" href="#" data-bs-target="#modal__delete" data-bs-toggle="modal">Usuń konto</a></div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -277,8 +277,8 @@
                                                 </div>
                                                 <div class="col-auto">
                                                     <div class="row gx-2 align-items-center">
-                                                        <div class="col-auto"><button class="btn btn-warning disabled" type="button" disabled="">Zablokuj</button></div>
-                                                        <div class="col-auto"><button class="btn btn-danger disabled" type="button" disabled="">Usuń</button></div>
+                                                        <div class="col-auto"><button class="btn btn-warning" type="button" data-bs-target="#modal__lock" data-bs-toggle="modal">Zablokuj</button></div>
+                                                        <div class="col-auto"><button class="btn btn-danger" type="button" data-bs-target="#modal__delete" data-bs-toggle="modal">Usuń</button></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -291,6 +291,48 @@
                 </div>
             </div>
         </main>
+    </div>
+    <div>
+        <div class="modal fade" role="dialog" tabindex="-1" id="modal__lock">
+            <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header text-white bg-primary py-2">
+                        <h6 class="modal-title">Zablokuj</h6><button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p class="text-center mb-0">Czy na pewno chcesz zablokować wybrane pozycje?</p>
+                    </div>
+                    <div class="modal-footer bg-lightblue py-2">
+                        <div class="w-100">
+                            <div class="row justify-content-between">
+                                <div class="col-auto"><button class="btn btn-warning btn-sm" type="button" data-bs-target="#modal__lock" data-bs-toggle="modal">Zablokuj</button></div>
+                                <div class="col-auto"><button class="btn btn-info btn-sm" type="button" data-bs-dismiss="modal">Nie blokuj</button></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" role="dialog" tabindex="-1" id="modal__delete">
+            <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header text-white bg-primary py-2">
+                        <h6 class="modal-title">Usuń pozycje</h6><button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p class="text-center mb-0">Czy na pewno chcesz usunąć wybrane pozycje?</p>
+                    </div>
+                    <div class="modal-footer bg-lightblue py-2">
+                        <div class="w-100">
+                            <div class="row justify-content-between">
+                                <div class="col-auto"><button class="btn btn-danger btn-sm" type="button" data-bs-target="#modal__delete" data-bs-toggle="modal">Usuń</button></div>
+                                <div class="col-auto"><button class="btn btn-info btn-sm" type="button" data-bs-dismiss="modal">Nie usuwaj</button></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="assets/js/jquery.min.js?h=84e399b8f2181ccd73394fdeddff1638"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js?h=5488c86a1260428f0c13c0f8fb06bf6a"></script>
