--- a/app-sprzedawca-oferty-edycja.html
+++ b/app-sprzedawca-oferty-edycja.html
@@ -94,7 +94,11 @@
                                     <div class="col">
                                         <h3 class="fs-6 fw-normal text-black-50"><small>Nazwa</small></h3><input type="text" class="form-control" value="Energia elektryczna dla Odbiorców Indywidualnych Taryfy Fioletowej">
                                     </div>
-                                    <div class="col-3">
+                                </div>
+                            </div>
+                            <div class="bg-white shadow-sm py-3 px-4 mb-4">
+                                <div class="row row-cols-5">
+                                    <div class="col">
                                         <h3 class="fs-6 fw-normal text-black-50"><small>Taryfa</small></h3><select class="form-select py-1">
                                             <option value="">Wybierz</option>
                                             <option value="">G11</option>
@@ -102,6 +106,16 @@
                                             <option value="" selected="">G12w</option>
                                             <option value="">C11</option>
                                             <option value="">C12</option>
+                                        </select>
+                                    </div>
+                                    <div class="col">
+                                        <h3 class="fs-6 fw-normal text-black-50"><small>Dystrybutorzy</small></h3><select class="form-select py-1" multiple="">
+                                            <option value="">Wybierz</option>
+                                            <option value="" selected="">TAURON Dystrybucja S.A.</option>
+                                            <option value="" selected="">Stoen Operator Sp. z o.o.</option>
+                                            <option value="">Energa-Operator S.A.</option>
+                                            <option value="">PGE Dystrybucja S.A.</option>
+                                            <option value="">Enea Operator Sp. z o.o.</option>
                                         </select>
                                     </div>
                                 </div>
@@ -143,6 +157,48 @@
                 </div>
             </div>
         </main>
+    </div>
+    <div>
+        <div class="modal fade" role="dialog" tabindex="-1" id="modal__lock">
+            <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header text-white bg-primary py-2">
+                        <h6 class="modal-title">Zablokuj</h6><button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p class="text-center mb-0">Czy na pewno chcesz zablokować wybrane pozycje?</p>
+                    </div>
+                    <div class="modal-footer bg-lightblue py-2">
+                        <div class="w-100">
+                            <div class="row justify-content-between">
+                                <div class="col-auto"><button class="btn btn-warning btn-sm" type="button" data-bs-target="#modal__lock" data-bs-toggle="modal">Zablokuj</button></div>
+                                <div class="col-auto"><button class="btn btn-info btn-sm" type="button" data-bs-dismiss="modal">Nie blokuj</button></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" role="dialog" tabindex="-1" id="modal__delete">
+            <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header text-white bg-primary py-2">
+                        <h6 class="modal-title">Usuń pozycje</h6><button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p class="text-center mb-0">Czy na pewno chcesz usunąć wybrane pozycje?</p>
+                    </div>
+                    <div class="modal-footer bg-lightblue py-2">
+                        <div class="w-100">
+                            <div class="row justify-content-between">
+                                <div class="col-auto"><button class="btn btn-danger btn-sm" type="button" data-bs-target="#modal__delete" data-bs-toggle="modal">Usuń</button></div>
+                                <div class="col-auto"><button class="btn btn-info btn-sm" type="button" data-bs-dismiss="modal">Nie usuwaj</button></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="assets/js/jquery.min.js?h=84e399b8f2181ccd73394fdeddff1638"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js?h=5488c86a1260428f0c13c0f8fb06bf6a"></script>
