--- a/app-dystrybutor-uzytkownicy-edycja.html
+++ b/app-dystrybutor-uzytkownicy-edycja.html
@@ -27,27 +27,22 @@
                             <div class="card shadow-none rounded-0 bg-transparent">
                                 <div class="card-body ps-3 py-5 pe-0">
                                     <ul class="nav nav-pills flex-column menu-sidebar ms-n4">
-                                        <li class="nav-item p-0"><a class="nav-link active text-uppercase border-3 d-flex align-items-center p-3" href="app-administrator-dashboard.html"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-grid-1x2-fill me-3">
-                                                    <path d="M0 1a1 1 0 0 1 1-1h5a1 1 0 0 1 1 1v14a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V1zm9 0a1 1 0 0 1 1-1h5a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1h-5a1 1 0 0 1-1-1V1zm0 9a1 1 0 0 1 1-1h5a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1h-5a1 1 0 0 1-1-1v-5z"></path>
-                                                </svg><span>Podsumowanie</span></a></li>
-                                        <li class="nav-item"><a class="nav-link text-uppercase border-3 d-flex align-items-center p-3 border-start border-3 border-lightblue" href="app-administrator-oferty.html"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-question-square me-3">
+                                        <li class="nav-item p-0"><a class="nav-link active text-uppercase border-3 d-flex align-items-center p-3" href="app-dystrybutor-dashboard.html"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-question-square me-3">
                                                     <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"></path>
                                                     <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"></path>
-                                                </svg><span>Oferty</span></a></li>
-                                        <li class="nav-item"><a class="nav-link text-uppercase border-3 d-flex align-items-center p-3 border-start border-3 border-lightblue" href="app-administrator-taryfy.html"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-question-square me-3">
+                                                </svg><span>Podsumowanie</span></a></li>
+                                        <li class="nav-item"><a class="nav-link text-uppercase border-3 d-flex align-items-center p-3 border-start border-3 border-lightblue" href="app-dystrybutor-taryfy.html"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-question-square me-3">
                                                     <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"></path>
                                                     <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"></path>
                                                 </svg><span>Taryfy</span></a></li>
-                                        <li class="nav-item"><a class="nav-link text-uppercase border-3 d-flex align-items-center p-3 border-start border-3 border-lightblue" href="app-administrator-umowy.html"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-file-medical-fill me-3">
-                                                    <path d="M12 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM8.5 4.5v.634l.549-.317a.5.5 0 1 1 .5.866L9 6l.549.317a.5.5 0 1 1-.5.866L8.5 6.866V7.5a.5.5 0 0 1-1 0v-.634l-.549.317a.5.5 0 1 1-.5-.866L7 6l-.549-.317a.5.5 0 0 1 .5-.866l.549.317V4.5a.5.5 0 1 1 1 0zM5.5 9h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1zm0 2h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1z"></path>
-                                                </svg><span>Umowy</span></a></li>
-                                        <li class="nav-item"><a class="nav-link text-uppercase border-3 d-flex align-items-center p-3 border-start border-3 border-lightblue" href="app-administrator-sprzedawcy.html"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-question-square me-3">
+                                        <li class="nav-item"><a class="nav-link text-uppercase border-3 d-flex align-items-center p-3 border-start border-3 border-lightblue" href="app-dystrybutor-umowy.html"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-question-square me-3">
                                                     <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"></path>
                                                     <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"></path>
-                                                </svg><span>Sprzedawcy</span></a></li>
-                                        <li class="nav-item"><a class="nav-link text-uppercase border-3 d-flex align-items-center p-3 border-start border-3 border-lightblue" href="app-administrator-dystrybutorzy.html"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-lightning-fill me-3">
-                                                    <path d="M5.52.359A.5.5 0 0 1 6 0h4a.5.5 0 0 1 .474.658L8.694 6H12.5a.5.5 0 0 1 .395.807l-7 9a.5.5 0 0 1-.873-.454L6.823 9.5H3.5a.5.5 0 0 1-.48-.641l2.5-8.5z"></path>
-                                                </svg><span>Dystrybutorzy</span></a></li>
+                                                </svg><span>Umowy</span></a></li>
+                                        <li class="nav-item"><a class="nav-link text-uppercase border-3 d-flex align-items-center p-3 border-start border-3 border-lightblue" href="app-dystrybutor-obszar.html"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-question-square me-3">
+                                                    <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"></path>
+                                                    <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"></path>
+                                                </svg><span>Obszar</span></a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -56,29 +51,19 @@
                     <div class="col d-flex flex-column">
                         <div>
                             <nav class="navbar navbar-light navbar-expand-md bg-white shadow-none px-3 border-bottom">
-                                <div class="container-fluid"><a class="navbar-brand fs-4 p-0" href="#!"><span>Brand Name</span><span class="badge bg-primary fs-6 rounded-pill ms-3">Administrator</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-                                    <div class="collapse navbar-collapse justify-content-end" id="navcol-1">
+                                <div class="container-fluid"><a class="navbar-brand fs-4 p-0" href="#!"><span>Brand Name</span><span class="badge bg-primary fs-6 rounded-pill ms-3">Dystrybutor</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-3"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                                    <div class="collapse navbar-collapse justify-content-end" id="navcol-3">
                                         <div>
                                             <div class="row align-items-center">
                                                 <div class="col-auto">
-                                                    <form>
-                                                        <div class="border-bottom">
-                                                            <div class="row gx-0">
-                                                                <div class="col-auto d-flex"><input class="form-control rounded-0 border-0 pe-0" type="text" placeholder="Wyszukaj w serwisie…"></div>
-                                                                <div class="col-auto d-flex"><button class="btn shadow-none rounded-0" type="submit">Znajdź</button></div>
-                                                            </div>
-                                                        </div>
-                                                    </form>
-                                                </div>
-                                                <div class="col-auto">
                                                     <ul class="navbar-nav align-items-center">
-                                                        <li class="nav-item justify-content-center align-items-center"><a class="nav-link d-flex justify-content-center align-items-center py-1" href="#"><span class="position-relative"><i class="la la-search fs-3"></i></span></a></li>
-                                                        <li class="nav-item justify-content-center align-items-center"><a class="nav-link d-flex justify-content-center align-items-center py-1" href="#" data-bs-target="#offcanvas__notifications__administrator" data-bs-toggle="offcanvas"><span class="position-relative"><i class="la la-bell fs-3"></i><span class="badge bg-danger d-flex justify-content-center align-items-center position-absolute start-100 top-0 translate-middle rounded-circle p-0" style="width: 20px;height: 20px;"><small style="margin-bottom: 1px;">12</small></span></span></a></li>
+                                                        <li class="nav-item justify-content-center align-items-center"><a class="nav-link d-flex justify-content-center align-items-center py-1" href="#" data-bs-target="#offcanvas__search__dystrybutor" data-bs-toggle="offcanvas"><span class="position-relative"><i class="la la-search fs-3"></i></span></a></li>
+                                                        <li class="nav-item justify-content-center align-items-center"><a class="nav-link d-flex justify-content-center align-items-center py-1" href="#" data-bs-target="#offcanvas__notifications__dystrybutor" data-bs-toggle="offcanvas"><span class="position-relative"><i class="la la-bell fs-3"></i><span class="badge bg-danger d-flex justify-content-center align-items-center position-absolute start-100 top-0 translate-middle rounded-circle p-0" style="width: 20px;height: 20px;"><small style="margin-bottom: 1px;">12</small></span></span></a></li>
                                                         <li class="nav-item dropdown justify-content-center align-items-center"><a class="nav-link d-flex justify-content-center align-items-center py-1" aria-expanded="false" data-bs-toggle="dropdown" href="#"><span class="position-relative"><i class="la la-building-o fs-3"></i></span></a>
-                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-administrator-firma.html">Dane firmy</a><a class="dropdown-item" href="app-administrator-uzytkownicy.html">Użytkownicy</a></div>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-dystrybutor-firma.html">Dane firmy</a><a class="dropdown-item" href="app-dystrybutor-uzytkownicy.html">Użytkownicy</a></div>
                                                         </li>
                                                         <li class="nav-item dropdown justify-content-center align-items-center"><a class="nav-link d-flex justify-content-center align-items-center py-1" aria-expanded="false" data-bs-toggle="dropdown" href="#"><span class="position-relative"><i class="la la-user fs-3"></i></span></a>
-                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-administrator-profil.html">Profil</a><a class="dropdown-item" href="app-administrator-konto.html">Ustawienia konta</a>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-dystrybutor-profil.html">Profil</a><a class="dropdown-item" href="app-dystrybutor-konto.html">Ustawienia konta</a>
                                                                 <div class="dropdown-divider"></div><a class="dropdown-item" href="auth-login.html">Wyloguj</a>
                                                             </div>
                                                         </li>
@@ -213,6 +198,39 @@
             <div class="p-3 border-top bg-lightblue">
                 <div class="row justify-content-end">
                     <div class="col-auto"><a class="btn btn-info" role="button" href="app-sprzedawca-powiadomienia.html">Przejdź do powiadomień</a></div>
+                </div>
+            </div>
+        </div>
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvas__search__administrator">
+            <div class="offcanvas-header text-white bg-primary">
+                <h5 class="offcanvas-title">Wyszukaj</h5><button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body"></div>
+            <div class="p-3 border-top bg-lightblue">
+                <div class="row justify-content-end">
+                    <div class="col-auto"><a class="btn btn-info" role="button" href="app-administrator-wyszukaj.html">Więcej wyników wyszukiwania</a></div>
+                </div>
+            </div>
+        </div>
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvas__search__dystrybutor">
+            <div class="offcanvas-header text-white bg-primary">
+                <h5 class="offcanvas-title">Wyszukaj</h5><button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body"></div>
+            <div class="p-3 border-top bg-lightblue">
+                <div class="row justify-content-end">
+                    <div class="col-auto"><a class="btn btn-info" role="button" href="app-dystrybutor-wyszukaj.html">Więcej wyników wyszukiwania</a></div>
+                </div>
+            </div>
+        </div>
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvas__search__sprzedawca">
+            <div class="offcanvas-header text-white bg-primary">
+                <h5 class="offcanvas-title">Wyszukaj</h5><button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body"></div>
+            <div class="p-3 border-top bg-lightblue">
+                <div class="row justify-content-end">
+                    <div class="col-auto"><a class="btn btn-info" role="button" href="app-sprzedawca-wyszukaj.html">Więcej wyników wyszukiwania</a></div>
                 </div>
             </div>
         </div>
