--- a/app-dystrybutor-wyszukaj.html
+++ b/app-dystrybutor-wyszukaj.html
@@ -27,22 +27,22 @@
                             <div class="card shadow-none rounded-0 bg-transparent">
                                 <div class="card-body ps-3 py-5 pe-0">
                                     <ul class="nav nav-pills flex-column menu-sidebar ms-n4">
-                                        <li class="nav-item p-0"><a class="nav-link active text-uppercase border-3 d-flex align-items-center p-3" href="app-sprzedawca-dashboard.html"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-question-square me-3">
+                                        <li class="nav-item p-0"><a class="nav-link active text-uppercase border-3 d-flex align-items-center p-3" href="app-dystrybutor-dashboard.html"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-question-square me-3">
                                                     <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"></path>
                                                     <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"></path>
                                                 </svg><span>Podsumowanie</span></a></li>
-                                        <li class="nav-item"><a class="nav-link text-uppercase border-3 d-flex align-items-center p-3 border-start border-3 border-lightblue" href="app-sprzedawca-oferty.html"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-question-square me-3">
+                                        <li class="nav-item"><a class="nav-link text-uppercase border-3 d-flex align-items-center p-3 border-start border-3 border-lightblue" href="app-dystrybutor-taryfy.html"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-question-square me-3">
                                                     <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"></path>
                                                     <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"></path>
-                                                </svg><span>Oferty</span></a></li>
-                                        <li class="nav-item"><a class="nav-link text-uppercase border-3 d-flex align-items-center p-3 border-start border-3 border-lightblue" href="app-sprzedawca-umowy.html"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-question-square me-3">
+                                                </svg><span>Taryfy</span></a></li>
+                                        <li class="nav-item"><a class="nav-link text-uppercase border-3 d-flex align-items-center p-3 border-start border-3 border-lightblue" href="app-dystrybutor-umowy.html"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-question-square me-3">
                                                     <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"></path>
                                                     <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"></path>
                                                 </svg><span>Umowy</span></a></li>
-                                        <li class="nav-item"><a class="nav-link text-uppercase border-3 d-flex align-items-center p-3 border-start border-3 border-lightblue" href="app-sprzedawca-ustawienia.html"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-question-square me-3">
+                                        <li class="nav-item"><a class="nav-link text-uppercase border-3 d-flex align-items-center p-3 border-start border-3 border-lightblue" href="app-dystrybutor-obszar.html"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-question-square me-3">
                                                     <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"></path>
                                                     <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"></path>
-                                                </svg><span>Ustawienia</span></a></li>
+                                                </svg><span>Obszar</span></a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -51,19 +51,19 @@
                     <div class="col d-flex flex-column">
                         <div>
                             <nav class="navbar navbar-light navbar-expand-md bg-white shadow-none px-3 border-bottom">
-                                <div class="container-fluid"><a class="navbar-brand fs-4 p-0" href="#!"><span>Brand Name</span><span class="badge bg-primary fs-6 rounded-pill ms-3">Sprzedawca</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-                                    <div class="collapse navbar-collapse justify-content-end" id="navcol-1">
+                                <div class="container-fluid"><a class="navbar-brand fs-4 p-0" href="#!"><span>Brand Name</span><span class="badge bg-primary fs-6 rounded-pill ms-3">Dystrybutor</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-3"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                                    <div class="collapse navbar-collapse justify-content-end" id="navcol-3">
                                         <div>
                                             <div class="row align-items-center">
                                                 <div class="col-auto">
                                                     <ul class="navbar-nav align-items-center">
-                                                        <li class="nav-item justify-content-center align-items-center"><a class="nav-link d-flex justify-content-center align-items-center py-1" href="#" data-bs-target="#offcanvas__search__sprzedawca" data-bs-toggle="offcanvas"><span class="position-relative"><i class="la la-search fs-3"></i></span></a></li>
-                                                        <li class="nav-item justify-content-center align-items-center"><a class="nav-link d-flex justify-content-center align-items-center py-1" href="#" data-bs-target="#offcanvas__notifications__sprzedawca" data-bs-toggle="offcanvas"><span class="position-relative"><i class="la la-bell fs-3"></i><span class="badge bg-danger d-flex justify-content-center align-items-center position-absolute start-100 top-0 translate-middle rounded-circle p-0" style="width: 20px;height: 20px;"><small style="margin-bottom: 1px;">12</small></span></span></a></li>
+                                                        <li class="nav-item justify-content-center align-items-center"><a class="nav-link d-flex justify-content-center align-items-center py-1" href="#" data-bs-target="#offcanvas__search__dystrybutor" data-bs-toggle="offcanvas"><span class="position-relative"><i class="la la-search fs-3"></i></span></a></li>
+                                                        <li class="nav-item justify-content-center align-items-center"><a class="nav-link d-flex justify-content-center align-items-center py-1" href="#" data-bs-target="#offcanvas__notifications__dystrybutor" data-bs-toggle="offcanvas"><span class="position-relative"><i class="la la-bell fs-3"></i><span class="badge bg-danger d-flex justify-content-center align-items-center position-absolute start-100 top-0 translate-middle rounded-circle p-0" style="width: 20px;height: 20px;"><small style="margin-bottom: 1px;">12</small></span></span></a></li>
                                                         <li class="nav-item dropdown justify-content-center align-items-center"><a class="nav-link d-flex justify-content-center align-items-center py-1" aria-expanded="false" data-bs-toggle="dropdown" href="#"><span class="position-relative"><i class="la la-building-o fs-3"></i></span></a>
-                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-sprzedawca-firma.html">Dane firmy</a><a class="dropdown-item" href="app-sprzedawca-uzytkownicy.html">Użytkownicy</a></div>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-dystrybutor-firma.html">Dane firmy</a><a class="dropdown-item" href="app-dystrybutor-uzytkownicy.html">Użytkownicy</a></div>
                                                         </li>
                                                         <li class="nav-item dropdown justify-content-center align-items-center"><a class="nav-link d-flex justify-content-center align-items-center py-1" aria-expanded="false" data-bs-toggle="dropdown" href="#"><span class="position-relative"><i class="la la-user fs-3"></i></span></a>
-                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-sprzedawca-profil.html">Profil</a><a class="dropdown-item" href="app-sprzedawca-konto.html">Ustawienia konta</a>
+                                                            <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="app-dystrybutor-profil.html">Profil</a><a class="dropdown-item" href="app-dystrybutor-konto.html">Ustawienia konta</a>
                                                                 <div class="dropdown-divider"></div><a class="dropdown-item" href="auth-login.html">Wyloguj</a>
                                                             </div>
                                                         </li>
@@ -76,55 +76,8 @@
                                 </div>
                             </nav>
                         </div>
-                        <div class="offcanvas offcanvas-end" tabindex="-1" data-bs-keyboard="false" id="offcanvas__filters">
-                            <div class="offcanvas-header text-white bg-primary">
-                                <h5 class="offcanvas-title">Filtruj</h5><button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                            </div>
-                            <div class="offcanvas-body bg-light">
-                                <form>
-                                    <div class="row gy-3 row-cols-1">
-                                        <div class="col">
-                                            <div class="input-group"><input class="form-control" type="text"><button class="btn btn-info shadow-none" type="button">Szukaj</button></div>
-                                        </div>
-                                        <div class="col"><label class="form-label fw-bold">Status</label><select class="form-select">
-                                                <option value="">Wszystkie</option>
-                                                <option value="">Aktywny</option>
-                                                <option value="">Zablokowany</option>
-                                            </select></div>
-                                        <div class="col">
-                                            <div class="d-flex justify-content-end"><button class="btn btn-info" type="button" data-bs-target="#offcanvas__filters" data-bs-toggle="offcanvas">Filtruj</button></div>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
                         <div class="flex-grow-1 p-4">
-                            <p class="mb-1">Użytkownicy</p>
-                            <h2 class="mb-4">Robert Chojnacki</h2>
-                            <div class="bg-white shadow-sm py-3 px-4 mb-4">
-                                <div class="row row-cols-5">
-                                    <div class="col">
-                                        <h3 class="fs-6 fw-normal text-black-50"><small>Imię</small></h3>
-                                        <p class="mb-0">Robert</p>
-                                    </div>
-                                    <div class="col">
-                                        <h3 class="fs-6 fw-normal text-black-50"><small>Nazwisko</small></h3>
-                                        <p class="mb-0">Chojnacki</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="bg-white shadow-sm py-3 px-4 mb-4">
-                                <div class="row row-cols-5">
-                                    <div class="col">
-                                        <h3 class="fs-6 fw-normal text-black-50"><small>Telefon</small></h3>
-                                        <p class="mb-0">+48 987 654 321</p>
-                                    </div>
-                                    <div class="col">
-                                        <h3 class="fs-6 fw-normal text-black-50"><small>E-mail</small></h3>
-                                        <p class="mb-0">robert.chojnacki@example.com</p>
-                                    </div>
-                                </div>
-                            </div>
+                            <h2>Wyniki wyszukiwania</h2>
                         </div>
                         <div>
                             <nav class="navbar navbar-light navbar-expand bg-white shadow-none p-0 border-top">
@@ -132,14 +85,10 @@
                                     <div class="collapse navbar-collapse py-3 px-4" id="navcol-2">
                                         <div class="w-100">
                                             <div class="row justify-content-end">
-                                                <div class="col-auto me-auto">
-                                                    <div class="row gx-2 align-items-center">
-                                                        <div class="col-auto"><a class="btn btn-primary" role="button" href="app-sprzedawca-uzytkownicy.html">Powrót</a></div>
-                                                    </div>
-                                                </div>
                                                 <div class="col-auto">
                                                     <div class="row gx-2 align-items-center">
-                                                        <div class="col-auto"><a class="btn btn-info" role="button" href="app-sprzedawca-uzytkownicy-edycja.html">Edytuj</a></div>
+                                                        <div class="col-auto"><button class="btn btn-primary" type="button">Button</button></div>
+                                                        <div class="col-auto"><button class="btn btn-primary" type="button">Button</button></div>
                                                     </div>
                                                 </div>
                                             </div>
