--- a/app-sprzedawca-wyszukaj.html
+++ b/app-sprzedawca-wyszukaj.html
@@ -76,55 +76,8 @@
                                 </div>
                             </nav>
                         </div>
-                        <div class="offcanvas offcanvas-end" tabindex="-1" data-bs-keyboard="false" id="offcanvas__filters">
-                            <div class="offcanvas-header text-white bg-primary">
-                                <h5 class="offcanvas-title">Filtruj</h5><button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                            </div>
-                            <div class="offcanvas-body bg-light">
-                                <form>
-                                    <div class="row gy-3 row-cols-1">
-                                        <div class="col">
-                                            <div class="input-group"><input class="form-control" type="text"><button class="btn btn-info shadow-none" type="button">Szukaj</button></div>
-                                        </div>
-                                        <div class="col"><label class="form-label fw-bold">Status</label><select class="form-select">
-                                                <option value="">Wszystkie</option>
-                                                <option value="">Aktywny</option>
-                                                <option value="">Zablokowany</option>
-                                            </select></div>
-                                        <div class="col">
-                                            <div class="d-flex justify-content-end"><button class="btn btn-info" type="button" data-bs-target="#offcanvas__filters" data-bs-toggle="offcanvas">Filtruj</button></div>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
                         <div class="flex-grow-1 p-4">
-                            <p class="mb-1">Użytkownicy</p>
-                            <h2 class="mb-4">Robert Chojnacki</h2>
-                            <div class="bg-white shadow-sm py-3 px-4 mb-4">
-                                <div class="row row-cols-5">
-                                    <div class="col">
-                                        <h3 class="fs-6 fw-normal text-black-50"><small>Imię</small></h3>
-                                        <p class="mb-0">Robert</p>
-                                    </div>
-                                    <div class="col">
-                                        <h3 class="fs-6 fw-normal text-black-50"><small>Nazwisko</small></h3>
-                                        <p class="mb-0">Chojnacki</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="bg-white shadow-sm py-3 px-4 mb-4">
-                                <div class="row row-cols-5">
-                                    <div class="col">
-                                        <h3 class="fs-6 fw-normal text-black-50"><small>Telefon</small></h3>
-                                        <p class="mb-0">+48 987 654 321</p>
-                                    </div>
-                                    <div class="col">
-                                        <h3 class="fs-6 fw-normal text-black-50"><small>E-mail</small></h3>
-                                        <p class="mb-0">robert.chojnacki@example.com</p>
-                                    </div>
-                                </div>
-                            </div>
+                            <h2>Wyniki wyszukiwania</h2>
                         </div>
                         <div>
                             <nav class="navbar navbar-light navbar-expand bg-white shadow-none p-0 border-top">
@@ -132,14 +85,10 @@
                                     <div class="collapse navbar-collapse py-3 px-4" id="navcol-2">
                                         <div class="w-100">
                                             <div class="row justify-content-end">
-                                                <div class="col-auto me-auto">
-                                                    <div class="row gx-2 align-items-center">
-                                                        <div class="col-auto"><a class="btn btn-primary" role="button" href="app-sprzedawca-uzytkownicy.html">Powrót</a></div>
-                                                    </div>
-                                                </div>
                                                 <div class="col-auto">
                                                     <div class="row gx-2 align-items-center">
-                                                        <div class="col-auto"><a class="btn btn-info" role="button" href="app-sprzedawca-uzytkownicy-edycja.html">Edytuj</a></div>
+                                                        <div class="col-auto"><button class="btn btn-primary" type="button">Button</button></div>
+                                                        <div class="col-auto"><button class="btn btn-primary" type="button">Button</button></div>
                                                     </div>
                                                 </div>
                                             </div>
